// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`admin get comments > should return comments 1`] = `
{
  "anonymousName": null,
  "children": [],
  "content": "comment 2 from "admin" role "admin" isSpam "false" anonymous "false"",
  "createdAt": "1970-01-01T00:00:20.000Z",
  "displayName": "admin",
  "id": 1,
  "isSpam": false,
  "parentId": null,
  "path": "/",
  "rawContent": "comment 2 from "admin" role "admin" isSpam "false" anonymous "false"",
  "reactions": [
    {
      "emojiKey": "heart",
      "emojiRaw": "❤️",
      "id": 2,
      "user": {
        "key": "anon-key",
        "type": "anonymous",
      },
    },
    {
      "emojiKey": "thumbs_up",
      "emojiRaw": "👍",
      "id": 1,
      "user": {
        "id": "2",
        "image": "https://api.dicebear.com/9.x/notionists-neutral/svg?seed=2",
        "name": "user1",
        "type": "user",
      },
    },
  ],
  "replyToId": null,
  "updatedAt": "2000-01-01T00:00:00.000Z",
  "userAgent": null,
  "userEmail": "admin@example.com",
  "userId": "1",
  "userImage": "https://api.dicebear.com/9.x/notionists-neutral/svg?seed=1",
  "userIp": null,
  "userName": "admin",
  "visitorEmail": null,
  "visitorName": null,
}
`;

exports[`non-admin get comments > should return comments 1`] = `
{
  "anonymousName": null,
  "children": [],
  "content": "comment 2 from "admin" role "admin" isSpam "false" anonymous "false"",
  "createdAt": "1970-01-01T00:00:20.000Z",
  "displayName": "admin",
  "id": 1,
  "parentId": null,
  "path": "/",
  "rawContent": "comment 2 from "admin" role "admin" isSpam "false" anonymous "false"",
  "reactions": [
    {
      "emojiKey": "heart",
      "emojiRaw": "❤️",
      "id": 2,
      "user": {
        "key": "anon-key",
        "type": "anonymous",
      },
    },
    {
      "emojiKey": "thumbs_up",
      "emojiRaw": "👍",
      "id": 1,
      "user": {
        "id": "2",
        "image": "https://api.dicebear.com/9.x/notionists-neutral/svg?seed=2",
        "name": "user1",
        "type": "user",
      },
    },
  ],
  "replyToId": null,
  "updatedAt": "2000-01-01T00:00:00.000Z",
  "userId": "1",
  "userImage": "https://api.dicebear.com/9.x/notionists-neutral/svg?seed=1",
}
`;
